# MMZ

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-gh-artifact.yml  python-package.yml
mmz/: requirements.txt  utils.py
mmz/agents/: __init__.py  cheap_research.py  cli.py  dev_autogen.py  dev_autogen_magentic.py  external_sources.py  tools.py  with_guidance.py
mmz/agents/tools/: with_guidance.py
mmz/data/: torch_datasets.py
mmz/datasets/: __init__.py  cvelist5.py  torch_datasets.py
mmz/experiments/: __init__.py  agent_automations.py  causal_gpt2.py  cli.py  hf_causal_gpt2.py
mmz/models/: __init__.py  base_fine_tuners.py  torch_autoencoder.py  torch_embeddings.py  torch_gan.py  torch_gpt2.py  torch_veegan.py
mmz/notebooks/: torch_celebfaces_sample.ipynb  torch_veegan_dev.ipynb
